# thesillyhome-container

./: .devcontainer.json  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml
.github/: docker-image.yaml
.github/workflows/: docker-arm.yml  docker-image-aarch64.yaml  docker-image-amd64.yaml  docker-image-arm.yaml  docker-image-armv7.yaml  docker-image.yml  docker-image2.yaml  docker-publish.yml
appdaemon/: appdaemon.yaml
appdaemon/apps/: model_executor.py
frontend/: package-lock.json  package.json
frontend/.storage/: config.yaml
frontend/src/: app.html
frontend/src/lib/: CodeEditor.svelte  TipTap.svelte
frontend/src/routes/: index copy.svelte  index.svelte
frontend/static/: smui-dark.css
proxy/: Dockerfile  config.json  entrypoint.sh  nginx.conf.gtpl
startup/: run.sh
thesillyhome_src/appdaemon/: appdaemon.yaml
thesillyhome_src/appdaemon/apps/: apps.yaml  model_executor.py  model_executor.py_bak  states_listenor.py
thesillyhome_src/exploratory_data/: exploratory.ipynb
thesillyhome_src/frontend/: config.yaml  package-lock.json  package.json  playwright.config.ts  svelte.config.js  test.py  vite.config.js
thesillyhome_src/startup/: crontab  run.sh
thesillyhome_src/thesillyhome/: README.md  pyproject.toml  requirements.txt
thesillyhome_src/thesillyhome/src/thesillyhome/model_creator/: config_checker.py  extract_routine.py  home.py  home.py_bak  learning_model.py  learning_model.py_bak  logger.py  main.py  parse_data.py  read_config_json.py
workflows/: docker-image.yaml
(+79 files in other folders)
