[tool.poetry]
name = "thesillyhome"
version = "0.1.0"
description = ""
authors = ["Chris L"]
license = "Apache"

[tool.poetry.dependencies]
python = "3.9"
mysql-connector = "2.2.9"
numpy = "1.22.4"
pandas = "1.4.2"
scikit-learn = "1.1.1"
psycopg2 = "2.9.3"
matplotlib = "3.5.2"
SQLAlchemy = "1.4.40"
PyMySQL = "1.0.2"
cryptography = "37.0.4"
scipy = "1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
